--- a/baobaoExperimentCamera/baobaoExperimentCamera.xcodeproj/xcshareddata/xcschemes/baobaoExperimentCamera Release.xcscheme
+++ b/baobaoExperimentCamera/baobaoExperimentCamera.xcodeproj/xcshareddata/xcschemes/baobaoExperimentCamera Release.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "baobaoExperimentKinect.app"
-               BlueprintName = "baobaoExperimentKinect"
-               ReferencedContainer = "container:baobaoExperimentKinect.xcodeproj">
+               BuildableName = "baobaoExperimentCamera.app"
+               BlueprintName = "baobaoExperimentCamera"
+               ReferencedContainer = "container:baobaoExperimentCamera.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "baobaoExperimentKinect.app"
-            BlueprintName = "baobaoExperimentKinect"
-            ReferencedContainer = "container:baobaoExperimentKinect.xcodeproj">
+            BuildableName = "baobaoExperimentCamera.app"
+            BlueprintName = "baobaoExperimentCamera"
+            ReferencedContainer = "container:baobaoExperimentCamera.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -48,14 +48,13 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "baobaoExperimentKinect.app"
-            BlueprintName = "baobaoExperimentKinect"
-            ReferencedContainer = "container:baobaoExperimentKinect.xcodeproj">
+            BuildableName = "baobaoExperimentCamera.app"
+            BlueprintName = "baobaoExperimentCamera"
+            ReferencedContainer = "container:baobaoExperimentCamera.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -67,14 +66,13 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "baobaoExperimentKinect.app"
-            BlueprintName = "baobaoExperimentKinect"
-            ReferencedContainer = "container:baobaoExperimentKinect.xcodeproj">
+            BuildableName = "baobaoExperimentCamera.app"
+            BlueprintName = "baobaoExperimentCamera"
+            ReferencedContainer = "container:baobaoExperimentCamera.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
